--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/viewpager": "^1.1.7",
     "firebase": "^6.2.4",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-collapsible": "^1.4.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-paper": "^2.16.0",
     "react-native-slider": "^0.11.0",
-    "react-navigation": "^3.11.0"
+    "react-native-step-indicator": "^0.0.11",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.11.0",
+    "react-navigation-material-bottom-tabs": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
