--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-paper": "^2.16.0",
     "react-native-slider": "^0.11.0",
     "react-native-step-indicator": "^0.0.11",
+    "react-native-tags": "^2.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0",
     "react-navigation-material-bottom-tabs": "^1.0.0"
