--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-native-tags": "^2.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0",
-    "react-navigation-material-bottom-tabs": "^1.0.0"
+    "react-navigation-material-bottom-tabs": "^1.0.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
