--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@react-native-community/viewpager": "^1.1.7",
     "firebase": "^6.2.4",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-collapsible": "^1.4.0",
